--- a/index.html
+++ b/index.html
@@ -382,9 +382,20 @@
                     </a>
                 </li>
             </ul>
-            <form class="footer-form" name="subscribe-form"></form>
-            <button type="submit">Subscribe</button>
-            </div>
+
+            <div class="footer-form">
+            <p class="footer-bnb">Subscribe</p>
+            <form class="footer-form-fieled">
+                <label class="form-label" for="input-email">
+                    <input class="form-input"type="email" id="input-name"
+                     name="input-email" placeholder="E-mail" required/>
+                </label>
+            <button class="footer-button" type="submit">Subscribe
+            <svg class="form-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-frame"></use>
+            </svg>
+            </button>
+            </form>
             </div>
     </footer>
     <div class="backdrop is-open">
@@ -401,7 +412,7 @@
         <div class="modal-form-field">
         <label class="modal-form-label" for="user_name">Name</label>
         <div class="modal-form-wrapper">
-        <input class="modal-form-input"type="text" id="user_name" name="user_name" />
+        <input class="modal-form-input" type="text" id="user_name" name="user_name" />
         <svg class="modal-form-icon" width="18" height="24">
          <use href="./images/icons.svg#icon-person"></use>
         </svg>
