--- a/index.html
+++ b/index.html
@@ -343,6 +343,7 @@
      <!-- Footer section -->
     <footer class="footer">
         <div class="container footer-container">
+
     <div class="footer-logo-slogan">
     <a class="logo footer-header-logo" href="./index.html">Web<span 
         class="footer-logo-part">Studio</span></a>
@@ -350,6 +351,7 @@
             and  sales for your business with digital marketing 
             & growth solutions.</p>
             </div>
+
             <div class="social-block">
                 <p class="social-title">Social media</p>
             <ul class="footer-list">
@@ -382,6 +384,7 @@
                     </a>
                 </li>
             </ul>
+</div>
 
             <div class="footer-form">
             <p class="footer-bnb">Subscribe</p>
@@ -396,6 +399,7 @@
             </svg>
             </button>
             </form>
+            </div>
             </div>
     </footer>
     <div class="backdrop is-open">
