--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
             <p class="footer-bnb">Subscribe</p>
             <form class="footer-form-fieled">
                 <label class="form-label" for="input-email">
-                    <input class="form-input"type="email" id="input-name"
+                    <input class="form-input" type="email" id="input-email"
                      name="input-email" placeholder="E-mail" required/>
                 </label>
             <button class="footer-button" type="submit">Subscribe
