--- a/index.html
+++ b/index.html
@@ -388,11 +388,11 @@
 
             <div class="footer-form">
             <p class="footer-bnb">Subscribe</p>
-            <form class="footer-form-fieled">
-                <label class="form-label" for="input-email">
+            <form class="footer-form-field">
+                <label class="form-label" for="input-email">E-mail</label>
                     <input class="form-input" type="email" id="input-email"
                      name="input-email" placeholder="E-mail" required/>
-                </label>
+                
             <button class="footer-button" type="submit">Subscribe
             <svg class="form-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-frame"></use>
@@ -433,7 +433,7 @@
         </div>
         
         <div class="modal-form-field">
-            <label class="modal-form-label" for="user-phone">Phone number</label>
+            <label class="modal-form-label" for="user-phone">Phone</label>
             <div class="modal-form-wrapper">
                 <input class="modal-form-input" type="tel" id="user-phone" name="user-phone" />
                 <svg class="modal-form-icon" width="18" height="24">
