--- a/index.html
+++ b/index.html
@@ -389,10 +389,10 @@
             <div class="footer-form">
             <p class="footer-bnb">Subscribe</p>
             <form class="footer-form-field">
-                <label class="form-label" for="input-email">E-mail</label>
-                    <input class="form-input" type="email" id="input-email"
-                     name="input-email" placeholder="E-mail" required/>
-                
+                <label class="form-label" for="input-name">
+                    <input class="form-input" type="email" id="input-name"
+                     name="input-email" placeholder="E-mail" required />
+                </label>
             <button class="footer-button" type="submit">Subscribe
             <svg class="form-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-frame"></use>
