--- a/index.html
+++ b/index.html
@@ -414,9 +414,9 @@
 
         <form class="modal-form" name="review">
         <div class="modal-form-field">
-        <label class="modal-form-label" for="user_name">Name</label>
+        <label class="modal-form-label" for="user-name">Name</label>
         <div class="modal-form-wrapper">
-        <input class="modal-form-input" type="text" id="user_name" name="user_name" />
+        <input class="modal-form-input" type="text" id="user-name" name="user-name" />
         <svg class="modal-form-icon" width="18" height="24">
          <use href="./images/icons.svg#icon-person"></use>
         </svg>
@@ -448,15 +448,16 @@
             placeholder="Text input"></textarea>
         </div>
         <div class="form-agreement">
-            <input class="checkbox visually-hidden" type="checkbox" id="user-agreement" name="user-agreement" value="true"/>
-            <label for="user-agreement" class="agreement-wrapper">
+            <input class="checkbox visually-hidden" type="checkbox" id="user-privacy" 
+            name="user-privacy" value="true" checked />
+            <label class="agreement-wrapper" for="user-privacy">
                 <span class="agreement-checkbox">
                     <svg class="agreement-checkbox-icon" width="10" height="8">
                         <use href="./images/icons.svg#icon-check"></use>
                     </svg>
                 </span>
                 I accept the terms and conditions of the
-                <a href="./index.html" class="agreement-link">Privacy Policy</a>
+                <a class="agreement-link" href="./index.html" >Privacy Policy</a>
                 </label>
         </div>
         <button class="btn btn-accent" type="submit">Send</button>
