--- a/index.html
+++ b/index.html
@@ -425,7 +425,8 @@
 <div class="modal-form-field">
         <label class="modal-form-label" for="user-email">Email</label>
         <div class="modal-form-wrapper">
-            <input class="modal-form-input" type="email" id="user-email" name="user-email" />
+            <input class="modal-form-input" type="email" id="user-email" 
+            name="user-email" required />
             <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
             </svg>
@@ -435,7 +436,8 @@
         <div class="modal-form-field">
             <label class="modal-form-label" for="user-phone">Phone</label>
             <div class="modal-form-wrapper">
-                <input class="modal-form-input" type="tel" id="user-phone" name="user-phone" />
+                <input class="modal-form-input" type="tel" id="user-phone"
+                name="user-phone" required />
                 <svg class="modal-form-icon" width="18" height="24">
                     <use href="./images/icons.svg#icon-phone"></use>
                 </svg>
