--- a/index.html
+++ b/index.html
@@ -422,16 +422,7 @@
         </svg>
         </div>
         </div>
-        <div class="modal-form-field">
-            <label class="modal-form-label" for="user-email">Email</label>
-            <div class="modal-form-wrapper">
-                <input class="modal-form-input" type="email" id="user-email" name="user-email" required />
-                <svg class="modal-form-icon" width="18" height="24">
-                    <use href="./images/icons.svg#icon-email"></use>
-                </svg>
-            </div>
-        </div>
-        
+
         <div class="modal-form-field">
             <label class="modal-form-label" for="user-phone">Phone</label>
             <div class="modal-form-wrapper">
@@ -441,7 +432,15 @@
                 </svg>
             </div>
         </div>
-        
+        <div class="modal-form-field">
+            <label class="modal-form-label" for="user-email">Email</label>
+            <div class="modal-form-wrapper">
+                <input class="modal-form-input" type="email" id="user-email" name="user-email" required />
+                <svg class="modal-form-icon" width="18" height="24">
+                    <use href="./images/icons.svg#icon-email"></use>
+                </svg>
+            </div>
+        </div>
         <div class="modal-form-field">
             <label class="modal-form-label" for="user-comment">Comment</label>
             <textarea class="modal-form-message" id="user-comment" name="user-comment" rows="7"
@@ -449,7 +448,7 @@
         </div>
         <div class="form-agreement">
             <input class="checkbox visually-hidden" type="checkbox" id="user-privacy" 
-            name="user-privacy" value="true" checked />
+            name="user-privacy" value="true" />
             <label class="agreement-wrapper" for="user-privacy">
                 <span class="agreement-checkbox">
                     <svg class="agreement-checkbox-icon" width="10" height="8">
