--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                 </svg>
             </div>
         </div>
-        <div class="modal-form-field">
+        <div class="modal-form-textarea">
             <label class="modal-form-label" for="user-comment">Comment</label>
             <textarea class="modal-form-message" id="user-comment" name="user-comment" rows="7"
             placeholder="Text input"></textarea>
